# hackerrank

./: .gitignore  README.md
C/arrays/: a.out
python/: README.md  pyproject.toml
python/arrays/: problem_2_left_rotation.py
python/interview_preparation_kit/: problem_1_repeated_string.py  problem_3_sales_by_match.py  problem_4_jumping_on_the_clouds.py
python/interview_preparation_kit/algorithms/: CLAUDE.md  problem_1_Designer_PDF_viewer.md  problem_1_Designer_PDF_viewer.py  problem_2_utopian_tree.py  problem_3_angry_professor.py  problem_4_Beautiful_Days_at_the_Movies.py  problem_5_Viral_Advertising.py
python/interview_preparation_kit/arrays/: problem_1_2D_array_DS.py  problem_3_New_Year_Chaos.py  problem_4_Minimum_Swaps.py  problem_4_count_triplets.py  problem_5_Array_Manipulation.py  problem_5_frequency_queries.py
python/interview_preparation_kit/dictionaries_and_hashmaps/: problem_1_Ransom_Note.py  problem_2_Two_Strings.py  problem_3_Sherlock_and_Anagrams.py
python/interview_preparation_kit/general/: problem_1_repeated_string.md  problem_1_repeated_string.py  problem_2_counting_valleys.py
python/interview_preparation_kit/greedy_algorithms/: problem_1_Luck_Balance.md  problem_1_Luck_Balance.py  problem_2_Marcs_Cakewalk.md  problem_2_Marcs_Cakewalk.py  problem_3_grid_challenge.py
python/interview_preparation_kit/sorting/: problem_1_Bubble_Sort.py  problem_2_Mark_and_Toys.py  problem_3_Comparator.py  problem_4_Fradulent_Activity_Notifications.py  problem_5_merge_sort_counting_inversions.py
python/inverview_preparation_kit/: problem_1_repeated_string.py
(+54 files in other folders)
