[project]
name = "python-hackerrank"
version = "0.1.0"
description = "Python solutions for HackerRank Interview Preparation Kit"
authors = [{ name = "Alejandro Sánchez Yalí", email = "asanchezyali@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interview_preparation_kit"]
